			  - 2004-02-19:  Raised max gui_link_compact_limit value by changing its type to integer  (Matteo)
			  - 2004-03-02:  Converted URLs were persistant after re-uploading a new Flash banner - bug #887893  (Niels)
			  - 2004-03-02:  Fixed a bug in the Javascript Row selection code, which prevented FireFox users from selecting a country, continent, language or region - bug #905052  (Niels)
			  


phpAdsNew 2.0
			+ Misc changes
			  - 2003-08-19:  Added PHP5 check and warnings during install  (Matteo)
			  - 2003-08-22:  Optimized in the main stats page and client, campaign, affiliate history  (Matteo)
			  - 2003-08-22:  Added indexes on zoneid fields of stats tables  (Matteo)
			  - 2003-09-10:  Added optional check for dev-builds in currently available product updates  (Matteo)
			  - 2003-09-11:  Added a flag which states if the release is to be considered stable or a development build  (Matteo)
			  - 2003-09-11:  Added automatic enabling of dev-builds product updates when upgrading to a dev-build  (Matteo)
			  - 2003-09-14:  Optimised queries and added date filter to the 'campaign overview', 'Publishers & zones', 'Zone overview' & 'Linked banners overview' pages  (Niels)
			  - 2003-09-26:  Removed dependency on MD5() SQL function when upgrading from a release which didn't store passwords as md5 digest  (Matteo)
			  - 2003-09-29:  Updated copyright information in all the headers  (Niels)
			  - 2003-09-29:  Disabled E_NOTICE warnings because this is going to be the final version... (Niels)

			+ Misc bugfixes
			  - 2003-08-08:  Adviews email warning limit wasn't correctly saved (Matteo)
			  - 2003-08-18:  PHP code parsing in HMTL banners wasn't working as expected - bug #788280   (Matteo)
			  - 2003-09-01:  Fixed possible SQL errors on affiliate, campaign and client history reports   (Matteo)
			  - 2003-09-13:  Fixed E_ALL problems with hardcoded sources in banner-edit.php  (Niels)